[gd_scene load_steps=10 format=2]

[ext_resource path="res://5 - Hazards/Enemy/Enemy1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy1.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 7.5 )

[sub_resource type="Animation" id=7]
resource_name = "Dead"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 24, 25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=6]
resource_name = "Hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Run"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4.5, 7.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6.5, 8.5 )

[node name="Enemy1" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
vframes = 7
frame = 6

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "Run"
anims/Dead = SubResource( 7 )
anims/Hurt = SubResource( 6 )
anims/RESET = SubResource( 2 )
anims/Run = SubResource( 3 )

[node name="PathDetector" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PathDetector"]
modulate = Color( 0.6875, 0.0664673, 0.0664673, 1 )
position = Vector2( -0.5, -0.5 )
shape = SubResource( 4 )

[node name="hitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox"]
position = Vector2( -0.5, 0.5 )
shape = SubResource( 5 )
disabled = true

[connection signal="area_entered" from="hitBox" to="." method="_on_hitBox_area_entered"]
[connection signal="body_entered" from="hitBox" to="." method="_on_hitBox_body_entered"]
